--- a/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
+++ b/src/app/modules/home/register-usr/pages/register-usr/register-usr.component.html
@@ -6,12 +6,8 @@
   <title>Responsive Example</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.1/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.1/js/bootstrap.bundle.min.js"></script>
-  
- <style>
-      
+  <style>
+      /* Estilos para pantallas grandes */
       @media (min-width: 992px) {
       .form-row {
         display: flex;
@@ -64,216 +60,31 @@
     <div class="text">
      
      
-      <form>
-        <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
-        <div class="conte formulario">
-        <div class="form-row">
-          <div class="form-group col-md-4">
-            <label for="inputNombre">Nombre</label>
-            <input type="text" class="form-control" id="inputNombre" placeholder="Ingrese su nombre"  name="nombre" [(ngModel)]="persona.nombre">
-          </div>
-          <div class="form-group ccol-md-4">
-            <label for="inputApellido">Apellido</label>
-            <input type="text" class="form-control" id="inputApellido" placeholder="Ingrese su apellido"  name="apellido" [(ngModel)]="persona.apellido">
-          </div>
-          <div class="form-group ccol-md-4">
-            <label for="inputApellido">Fecha de Nac</label>
-            <input type="date" class="form-control" id="inputApellido" placeholder="Ingrese su apellido" name="fecha_nacimiento" [(ngModel)]="persona.fecha_nacimiento">
-          </div>
-        </div>
-        <div class="form-row">
-          
-          <div class="form-group col-md-4">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su correo electrónico" name="email" [(ngModel)]="persona.email">
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputDireccion">Dirección</label>
-          <input type="text" class="form-control" id="inputDireccion" placeholder="Ingrese su dirección"  name="direccion" [(ngModel)]="persona.direccion">
-          </div>
+      <form (ngSubmit)="onSignup()">
+        <input type="text" placeholder="Username" [(ngModel)]="signupRequest.username" name="username" required>
+        <input type="password" placeholder="Password" [(ngModel)]="signupRequest.password" name="password" required>
 
-          <div class="form-group col-md-4">
-            <label for="inputSexo">Sexo</label>
-            <select  id="inputSexo" class="form-control" name="sexo" [(ngModel)]="persona.sexo">
-              <option selected>Seleccione una opción...</option>
-              <option>Masculino</option>
-              <option>Femenino</option>
-              <option>No binario</option>
-            </select>
-          </div>
 
-          
-        </div>
-       
-        <div class="form-row">
-         
-          <div class="form-group ccol-md-4">
-            <label for="inputEtnia">Etnia</label>
-            <input type="text" class="form-control" id="inputEtnia" placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.etnia">
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputTelefono">Teléfono</label>
-            <input type="tel" class="form-control" id="inputTelefono" placeholder="Ingrese su teléfono" name="telefono" [(ngModel)]="persona.telefono" >
-          </div>
-          <div class="form-group col-md-4">
-            <label for="inputCelular">Celular</label>
-            <input type="tel" class="form-control" id="inputCelular" placeholder="Ingrese su celular" name="celular" [(ngModel)]="persona.celular">
-          </div>
-        </div>
-        <div class="form-row">
-         
-            <div class="form-group ccol-md-4">
-              <label for="inputEtnia">Cedula</label>
-              <input type="text" 
-              class="form-control" 
-              id="inputCedula" 
-              placeholder="Ingrese su cedula" 
-              name="cedula" [(ngModel)]="persona.cedula"
-              >
-            </div>
-
-            <div class="form-group col-md-4">
-              <label for="inputSexo">Nivelinstruccion</label>
-              <select  id="inputSexo" class="form-control" name="nivelintruccion" [(ngModel)]="persona.nivelintruccion">
-                <option selected>Seleccione una opción...</option>
-                <option>Primaria</option>
-                <option>Secundaria</option>
-                <option>Bachiller</option>
-                <option>Tercer nivel</option>
-                <option>Cuarto Nivel</option>
-              </select>
-            </div>
-            
-            <div class="form-group col-md-4">
-              <label for="inputTelefono">Usuario</label>
-              <input type="tel" class="form-control" id="inputusernam" placeholder="Ingrese su teléfono" name="username" [(ngModel)]="usuario.username" >
-            </div>
-            <div class="form-group col-md-4 pass-field " >
-              <label for="inputCelular">Password</label>
-              <input type="password" class="form-control" id="inputpassword" placeholder="Ingrese su password" name="password" [(ngModel)]="usuario.password">
-             
-              <i class="fa-solid fa-eye"></i>
-            </div>
-            <div class="cont text-justify">
-              <p style="color: white;">   Parametros de  Contraseña Segura</p>
-              <ul class="requirement-list">
-                <li>
-                  <i class="bi bi-check-circle-fill"></i>
-                  <span>Al menos 8 letras</span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle-fill"></i>
-                  <span>Al menos un número (0...9)</span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle-fill"></i>
-                  <span>Al menos una Minúscula (a...z)</span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle-fill"></i>
-                  <span>Al menos un carácter especial (!...$)</span>
-                </li>
-                <li>
-                  <i class="bi bi-check-circle-fill"></i>
-                  <span>Al menos una Mayúscula (A...Z)</span>
-                </li>
-              </ul>
-            </div>
-            
-         
-            
-
-          </div>
       
-        <button  (click)="onSubmit()" >Registrar</button>
-    </div>
-    </form>
+        <!-- Añade los demás campos de la clase Persona aquí -->
+        <input type="text" placeholder="Cedula" [(ngModel)]="signupRequest.cedula" name="cedula" required>
+        <input type="text" placeholder="Nombre" [(ngModel)]="signupRequest.nombre" name="nombre" required>
+        <input type="text" placeholder="Apellido" [(ngModel)]="signupRequest.apellido" name="apellido" required>
+        <input type="date" placeholder="Fecha de nacimiento" [(ngModel)]="signupRequest.fecha_nacimiento" name="fecha_nacimiento" required>
+        <input type="email" placeholder="Email" [(ngModel)]="signupRequest.email" name="email" required>
+        <input type="text" placeholder="Direccion" [(ngModel)]="signupRequest.direccion" name="direccion" required>
+        <input type="text" placeholder="Sexo" [(ngModel)]="signupRequest.sexo" name="sexo" required>
+        <input type="text" placeholder="Etnia" [(ngModel)]="signupRequest.etnia" name="etnia" required>
+        <input type="text" placeholder="Telefono" [(ngModel)]="signupRequest.telefono" name="telefono" required>
+        <input type="text" placeholder="Celular" [(ngModel)]="signupRequest.celular" name="celular" required>
+        <input type="text" placeholder="Nivel de instruccion" [(ngModel)]="signupRequest.nivelintruccion" name="nivelintruccion" required>
+      
+        <button type="submit">Register</button>
+      </form>
+      
     </div>
   </div>
 </body>
 </html>
 
 
-
-<!-- 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Responsive Example</title>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
- 
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<app-header></app-header>
-<body>
-
- 
-  <div class="bgimage">
-    <div class="menu">
-     
-    </div>
-    <div class="text">
-      <img id="imagenlogo" src="https://eduv.tecazuay.edu.ec/pluginfile.php/1/theme_academi/logo/1671035251/LOGO%20CUADRADO_SIN%20FONDO.png" alt="">
-    
-      <form>
-        <div class="conte">
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputNombre">Nombre</label>
-            <input type="text" class="form-control" id="inputNombre" placeholder="Ingrese su nombre">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputApellido">Apellido</label>
-            <input type="text" class="form-control" id="inputApellido" placeholder="Ingrese su apellido">
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputFechaNacimiento">Fecha de nacimiento</label>
-            <input type="date" class="form-control" id="inputFechaNacimiento">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputEmail">Email</label>
-            <input type="email" class="form-control" id="inputEmail" placeholder="Ingrese su correo electrónico">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="inputDireccion">Dirección</label>
-          <input type="text" class="form-control" id="inputDireccion" placeholder="Ingrese su dirección">
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputSexo">Sexo</label>
-            <select id="inputSexo" class="form-control">
-              <option selected>Seleccione una opción...</option>
-              <option>Masculino</option>
-              <option>Femenino</option>
-              <option>No binario</option>
-            </select>
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputEtnia">Etnia</label>
-            <input type="text" class="form-control" id="inputEtnia" placeholder="Ingrese su etnia">
-          </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group col-md-6">
-            <label for="inputTelefono">Teléfono</label>
-            <input type="tel" class="form-control" id="inputTelefono" placeholder="Ingrese su teléfono">
-          </div>
-          <div class="form-group col-md-6">
-            <label for="inputCelular">Celular</label>
-            <input type="tel" class="form-control" id="inputCelular" placeholder="Ingrese su celular">
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
-    </div>
-    </form>
-    
-    </div>
-  </div>
-</body>
-</html> -->
