--- a/src/app/modules/administrador/vista-perfil-admin/pages/vista-perfil-admin/vista-perfil-admin.component.html
+++ b/src/app/modules/administrador/vista-perfil-admin/pages/vista-perfil-admin/vista-perfil-admin.component.html
@@ -16,7 +16,7 @@
                       d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z" />
                     <path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z" />
                   </svg>
-                  <p class="text-secondary mb-1">Administrador de Programas de Capacitacion</p>
+                  <p class="text-secondary mb-1">Administrador de Programas de Capacitación</p>
                   <!-- <p class="text-muted font-size-sm">Celular: {{persona.celular}}</p> -->
                   <!-- <button class="btn btn-primary" (click)="mostrarDatos()">Ver</button> -->
                 </div>
@@ -57,7 +57,7 @@
                     <path fill-rule="evenodd"
                       d="M11.5 1a.5.5 0 0 1 0-1h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V1.707l-3.45 3.45A4 4 0 0 1 8.5 10.97V13H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V14H6a.5.5 0 0 1 0-1h1.5v-2.03a4 4 0 1 1 3.471-6.648L14.293 1H11.5zm-.997 4.346a3 3 0 1 0-5.006 3.309 3 3 0 0 0 5.006-3.31z" />
                   </svg>
-                  Genero
+                  Género
                 </h6>
                 <span class="text-secondary">{{persona.sexo}}</span>
               </li>
@@ -94,7 +94,7 @@
             <div class="card-body">
               <div class="row">
                 <div class="col-sm-3">
-                  <h6 class="mb-0">Cedula</h6>
+                  <h6 class="mb-0">Cédula</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
                   {{persona.cedula}}
@@ -112,7 +112,7 @@
               <hr>
               <div class="row">
                 <div class="col-sm-3">
-                  <h6 class="mb-0">Telefono:</h6>
+                  <h6 class="mb-0">Teléfono:</h6>
                 </div>
                 <div class="col-sm-9 text-secondary">
                   {{persona.telefono}}
