--- a/src/app/modules/participantes/edit-dts-participante/pages/edit-dts-participante/edit-dts-participante.component.html
+++ b/src/app/modules/participantes/edit-dts-participante/pages/edit-dts-participante/edit-dts-participante.component.html
@@ -18,8 +18,6 @@
                                 </svg>
                                 <h4>Estudiante </h4>
                                 <p class="text-secondary mb-1"></p>
-                                <!-- <p class="text-muted font-size-sm">Celular: {{persona.celular}}</p> -->
-                                <!-- <button class="btn btn-primary" (click)="mostrarDatos()">Ver</button> -->
                             </div>
                         </div>
                     </div>
@@ -48,7 +46,8 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputCedula"
-                                        placeholder="Ingrese su cedula" name="cedula" [(ngModel)]="persona.cedula">
+                                        placeholder="Ingrese su cedula" name="cedula" [(ngModel)]="persona.cedula"
+                                        disabled>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -58,6 +57,8 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputNombre"
                                         placeholder="Ingrese su nombre" name="nombre" [(ngModel)]="persona.nombre">
+                                    <small class="text-danger" *ngIf="!valnombre">Campo requerido.</small>
+
                                 </div>
                             </div>
 
@@ -69,6 +70,8 @@
                                     <input type="text" class="form-control" id="inputApellido"
                                         placeholder="Ingrese su apellido" name="apellido"
                                         [(ngModel)]="persona.apellido">
+                                    <small class="text-danger" *ngIf="!valapellido">Campo requerido.</small>
+
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -77,9 +80,12 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="date" class="form-control" id="inputApellido"
-                                        placeholder="Ingrese su apellido" name="fecha_nacimiento"
-                                        [(ngModel)]="persona.fecha_nacimiento">
+                                        placeholder="Ingrese su fecha de nacimiento" name="fecha_nacimiento"
+                                        [(ngModel)]="persona.fecha_nacimiento" (ngModelChange)="compararEdad()">
+                                    <small class="text-danger" *ngIf="!valfechan">Fecha Invalida.</small>
                                 </div>
+                                
+
                             </div>
                             <div class="row mb-3">
                                 <div class="col-sm-3">
@@ -89,6 +95,8 @@
                                     <input type="email" class="form-control" id="inputEmail"
                                         placeholder="Ingrese su correo electrónico" name="email"
                                         [(ngModel)]="persona.email">
+                                    <small class="text-danger" *ngIf="!valemail">Campo requerido en formato @gmail.com o
+                                        @tecazuay.edu.ec</small>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -99,6 +107,7 @@
                                     <input type="text" class="form-control" id="inputDireccion"
                                         placeholder="Ingrese su dirección" name="direccion"
                                         [(ngModel)]="persona.direccion">
+                                    <small class="text-danger" *ngIf="!valdireccion">Campo requerido</small>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -107,8 +116,10 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="tel" class="form-control" id="inputTelefono"
-                                        placeholder="Ingrese su teléfono" name="telefono"
-                                        [(ngModel)]="persona.telefono">
+                                        placeholder="Ingrese su teléfono" name="telefono" [(ngModel)]="persona.telefono"
+                                        (input)="filtrarNumeros($event)">
+                                    <small class="text-danger" *ngIf="!valtelefono">Campo requerido en formato
+                                        (xx)xxxxxxx</small>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -117,7 +128,10 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="tel" class="form-control" id="inputCelular"
-                                        placeholder="Ingrese su celular" name="celular" [(ngModel)]="persona.celular">
+                                        placeholder="Ingrese su celular" name="celular" [(ngModel)]="persona.celular"
+                                        (input)="filtrarNumerosc($event)">
+                                    <small class="text-danger" *ngIf="!valcelular">Campo requerido en formato (código de país y numero)
+                                        (xx)xxxxxxxxx</small>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -127,6 +141,7 @@
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputEtnia"
                                         placeholder="Ingrese su etnia" name="etnia" [(ngModel)]="persona.etnia">
+                                    <small class="text-danger" *ngIf="!valetnia">Campo requerido.</small>
                                 </div>
                             </div>
 
@@ -136,11 +151,11 @@
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <select id="inputSexo" class="form-control" name="sexo" [(ngModel)]="persona.sexo">
-                                        <option selected>Seleccione una opción...</option>
-                                        <option>Masculino</option>
-                                        <option>Femenino</option>
-                                        <option>No especificar</option>
+                                        <option value='Masculino'>Masculino</option>
+                                        <option value='Femenino'>Femenino</option>
+                                        <option value='No especificar'>No especificar</option>
                                     </select>
+                                    <small class="text-danger" *ngIf="!valsexo">Campo requerido.</small>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -150,30 +165,32 @@
                                 <div class="col-sm-9 text-secondary">
                                     <select id="inputSexo" class="form-control" name="nivelintruccion"
                                         [(ngModel)]="persona.nivelintruccion">
-                                        <option selected>Seleccione una opción...</option>
-                                        <option>Primaria</option>
-                                        <option>Secundaria</option>
-                                        <option>Bachiller</option>
-                                        <option>Tercer Nivel</option>
-                                        <option>Cuarto Nivel</option>
+                                        <option value="Primaria">Primaria</option>
+                                        <option value="Secundaria">Secundaria</option>
+                                        <option value="Bachiller">Bachiller</option>
+                                        <option value="Tercer Nivel">Tercer Nivel</option>
+                                        <option value="Cuarto Nivel">Cuarto Nivel</option>
                                     </select>
+
+                                    <small class="text-danger" *ngIf="!valnivel">Campo requerido.</small>
                                 </div>
                             </div>
-
+                            <!-- 
                             <div class="row mb-3">
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Hoja de Vida</h6>
                                 </div>
                                 <div class="col-sm-9 text-secondary">
                                     <input type="text" class="form-control" id="inputhojav"
-                                        placeholder="Ingrese su hoja de vida" name="hojav" [(ngModel)]="persona.hojavida">
+                                        placeholder="Ingrese su hoja de vida" name="hojav"
+                                        [(ngModel)]="persona.hojavida">
                                 </div>
-                            </div>
+                            </div> -->
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary">
                                     <Span></Span> <button type="button" class="btn btn-primary"
-                                        (click)="onSubmit()">Guardar Cambios</button>
+                                        (click)="validarcampos()">Guardar Cambios</button>
                                 </div>
                             </div>
                         </form>
