--- a/src/app/modules/docente-capacitador/horarios-curso/pages/horarios-curso.component.css
+++ b/src/app/modules/docente-capacitador/horarios-curso/pages/horarios-curso.component.css
@@ -60,3 +60,10 @@ body{
   .sin-borde {
     border: none;
   }
+
+  .container {
+    background-color: #ffffff;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* Agrega una sombra a los contornos */
+    border-radius: 8px; /* Redondea las esquinas */
+    padding: 20px; /* Opcional: Añade un relleno interno */
+  }
