--- a/src/app/modules/docente-capacitador/ver-reglamento/pages/ver-reglamento/ver-reglamento.component.html
+++ b/src/app/modules/docente-capacitador/ver-reglamento/pages/ver-reglamento/ver-reglamento.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="container" style="background-color: #ffffff;">
 
     <!DOCTYPE html>
@@ -17,7 +18,7 @@
         <br>
         <!-- title -->
         <embed src="assets/docs/REGLAMENTO DE FORMACIÓN CONTINUA.pdf" type="application/pdf" width="999vh"
-            height="900vh" />
+            height="900vh" style="text-align: center;" />
     </body>
 
     </html>
