--- a/src/app/modules/administrador/register-program-cap/pages/register-program-cap/register-program-cap.component.css
+++ b/src/app/modules/administrador/register-program-cap/pages/register-program-cap/register-program-cap.component.css
@@ -1,5 +1,6 @@
-
-  .thead-dark {
-    background-color: blue;
-    color: white;
+  .container {
+    background-color: #ffffff;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* Agrega una sombra a los contornos */
+    border-radius: 8px; /* Redondea las esquinas */
+    padding: 20px; /* Opcional: Añade un relleno interno */
   }
