--- a/src/app/modules/docente-capacitador/edit-list-curso/pages/edit-list-curso/edit-list-curso.component.css
+++ b/src/app/modules/docente-capacitador/edit-list-curso/pages/edit-list-curso/edit-list-curso.component.css
@@ -44,3 +44,9 @@
     a:hover::after {
       transform: scaleX(1); /* Mostrar el subrayado al pasar el mouse */
     }
+    .container {
+      background-color: #ffffff;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); /* Agrega una sombra a los contornos */
+      border-radius: 8px; /* Redondea las esquinas */
+      padding: 20px; /* Opcional: Añade un relleno interno */
+    }
